Added bootstrap files and external download folder

--- a/root/bootstrap-column-test.html
+++ b/root/bootstrap-column-test.html
@@ -12,14 +12,14 @@
         <title>Eastern Oregon University</title>
         <link href="stylesheets/site.css" rel="stylesheet" type="text/css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="stylesheets/bootstrap-columns.css" rel="stylesheet" type="text/css">
 
         <style>
             .bootstrap-row-test {
-                background-color: #808080;
+                background-color: #AAAAAA;
             }
+
             .bootstrap-col-test {
-                border: 1px solid #AAAAAA;
+                border: 1px solid #808080;
             }
         </style>
     </head>
@@ -29,7 +29,7 @@
             WELCOME TO EOU
             <br>
             <br>
-            
+
             <button class="main-button color-white background-red">Learn More</button>
             <button class="main-button color-white background-orange">Learn More</button>
             <button class="main-button color-white background-tan">Learn More</button>
