Almost got 12 column grid classes working.

--- a/root/index.html
+++ b/root/index.html
@@ -15,10 +15,8 @@
         <link href="stylesheets/bootstrap-columns.css" rel="stylesheet" type="text/css">
 
         <style>
-            .bootstrap-row-test {
+            .test-content {
                 background-color: #808080;
-            }
-            .bootstrap-col-test {
                 border: 1px solid #AAAAAA;
             }
         </style>
@@ -38,32 +36,32 @@
             <button class="main-button color-white background-blue">Learn More</button>
             <button>Normal Button</button>
 
-            <div class="row bootstrap-row-test">
-                <div class="col-xs-1 bootstrap-col-test">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
-                <div class="col-xs-1 bootstrap-col-test" ">.col-xs-1</div>
+            <div class="row">
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
             </div>
-            <div class="row bootstrap-row-test">
-                <div class="col-xs-8 bootstrap-col-test" ">.col-xs-8</div>
-                <div class="col-xs-4 bootstrap-col-test" ">.col-xs-4</div>
+            <div class="row">
+                <div class="col-xs-8"><div class="test-content">.col-xs-8</div></div>
+                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
             </div>
-            <div class="row bootstrap-row-test">
-                <div class="col-xs-4 bootstrap-col-test" ">.col-xs-4</div>
-                <div class="col-xs-4 bootstrap-col-test" ">.col-xs-4</div>
-                <div class="col-xs-4 bootstrap-col-test" ">.col-xs-4</div>
+            <div class="row">
+                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
+                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
+                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
             </div>
-            <div class="row bootstrap-row-test">
-                <div class="col-xs-6 bootstrap-col-test" ">.col-xs-6</div>
-                <div class="col-xs-6 bootstrap-col-test" ">.col-xs-6</div>
+            <div class="row">
+                <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
+                <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
             </div>
         </div>
 
