Got 12 column grid system working.

--- a/root/index.html
+++ b/root/index.html
@@ -63,6 +63,13 @@
                 <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
                 <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
             </div>
+            <div class="row">
+                <div class="col-xs-4 col-xs-offset-1"><div class="test-content">col-xs-4 col-xs-offset-1</div></div>
+                <div class="col-xs-4"><div class="test-content">col-xs-4</div></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-1"><div class="test-content">col-xs-8 col-xs-offset-1</div></div>
+            </div>
         </div>
 
         <script src="jquery/jquery-2.2.1.min.js"></script>
