Started working on layout

--- a/root/index.html
+++ b/root/index.html
@@ -13,64 +13,35 @@
         <link href="stylesheets/site.css" rel="stylesheet" type="text/css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="stylesheets/bootstrap-columns.css" rel="stylesheet" type="text/css">
-
-        <style>
-            .test-content {
-                background-color: #808080;
-                border: 1px solid #AAAAAA;
-            }
-        </style>
     </head>
     <body>
         <div class="container-fluid">
-             HELLO WORLD<br>
-            WELCOME TO EOU
-            <br>
-            <br>
+             
+            <div class="row spacing-margin-top-1 spacing-margin-left-half">
+                <div class="col-xs-4">
+                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1">Bn</button>
+                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                    <button class="main-button color-white background-tan spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                    <button class="main-button color-white background-green spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                    <button class="main-button color-white background-gold spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                </div>
+            </div>
             
-            <button class="main-button color-white background-red">Learn More</button>
-            <button class="main-button color-white background-orange">Learn More</button>
-            <button class="main-button color-white background-tan">Learn More</button>
-            <button class="main-button color-white background-green">Learn More</button>
-            <button class="main-button color-white background-gold">Learn More</button>
-            <button class="main-button color-white background-blue">Learn More</button>
-            <button>Normal Button</button>
+            <div class="row" style="position: page;">
+                <div class="col-xs-12">
+                    <span class="background-logo">Eastern Oregon University</span>
+                </div>
+            </div>
 
-            <div class="row">
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
-                <div class="col-xs-1"><div class="test-content">.col-xs-1</div></div>
+            <div class="row spacing-margin-top-8" style="position: page;">
+                <div class="col-xs-12">
+                    <button class="nav-button color-white background-red spacing-width-1 spacing-height-3">&lt;</button>
+                    <button class="nav-button color-white background-red spacing-width-1 spacing-height-3 pull-right">&gt;</button>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-xs-8"><div class="test-content">.col-xs-8</div></div>
-                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
-                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
-                <div class="col-xs-4"><div class="test-content">.col-xs-4</div></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
-                <div class="col-xs-6"><div class="test-content">.col-xs-6</div></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4 col-xs-offset-1"><div class="test-content">col-xs-4 col-xs-offset-1</div></div>
-                <div class="col-xs-4"><div class="test-content">col-xs-4</div></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-8 col-xs-offset-1"><div class="test-content">col-xs-8 col-xs-offset-1</div></div>
-            </div>
-        </div>
+
+        </div> <!-- END container div -->
 
         <script src="jquery/jquery-2.2.1.min.js"></script>
     </body>
