Fixed font sizing

--- a/root/index.html
+++ b/root/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div class="row spacing-margin-top-8" style="position: page;">
+            <div class="row nav-button-row">
                 <div class="col-xs-12">
                     <button class="nav-button color-white background-red spacing-width-1 spacing-height-3">&lt;</button>
                     <button class="nav-button color-white background-red spacing-width-1 spacing-height-3 pull-right">&gt;</button>
