Added the rest of the static content layouts

--- a/root/index.html
+++ b/root/index.html
@@ -11,6 +11,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="#333333">
         <title>Eastern Oregon University</title>
         <link href="stylesheets/site.css" rel="stylesheet" type="text/css">
+        <link href="stylesheets/positioning.css" rel="stylesheet" type="text/css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="stylesheets/bootstrap-columns.css" rel="stylesheet" type="text/css">
     </head>
@@ -28,7 +29,7 @@
                 </div>
             </div>
             
-            <div class="row" style="position: page;">
+            <div class="row title-row full-width">
                 <div class="col-xs-12">
                     <span class="background-logo">Eastern Oregon University</span>
                 </div>
@@ -38,6 +39,28 @@
                 <div class="col-xs-12">
                     <button class="nav-button color-white background-red spacing-width-1 spacing-height-3">&lt;</button>
                     <button class="nav-button color-white background-red spacing-width-1 spacing-height-3 pull-right">&gt;</button>
+                </div>
+            </div>
+
+            <div class="row social-button-row-1">
+                <div class="col-xs-3 col-xs-offset-6">
+                    <span class="tahoma-bold all-caps">Find us on:</span>
+                </div>
+            </div>
+
+            <div class="row social-button-row-2">
+                <div class="col-xs-3 col-xs-offset-6">
+                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1">f</button>
+                    <button class="main-button color-white background-tan spacing-width-1 spacing-height-1 spacing-margin-left-1">t</button>
+                    <button class="main-button color-white background-gold spacing-width-1 spacing-height-1 spacing-margin-left-1">i</button>
+                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1">r</button>
+                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1">y</button>
+                </div>
+            </div>
+
+            <div class="row copyright-row">
+                <div class="col-xs-3 col-xs-offset-3">
+                    <span class="copyright">Copyright &copy; 2016 Eastern Oregon University</span>
                 </div>
             </div>
 
