Started adding content boxes

--- a/root/index.html
+++ b/root/index.html
@@ -20,12 +20,12 @@
              
             <div class="row spacing-margin-top-1 spacing-margin-left-half">
                 <div class="col-xs-4">
-                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1">Bn</button>
-                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
-                    <button class="main-button color-white background-tan spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
-                    <button class="main-button color-white background-green spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
-                    <button class="main-button color-white background-gold spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
-                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1 spacing-margin-left-1">Bn</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1">Se</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1">St</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1">Fa</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1">Ac</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1">In</button>
+                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1">Ot</button>
                 </div>
             </div>
             
@@ -61,6 +61,49 @@
             <div class="row copyright-row">
                 <div class="col-xs-3 col-xs-offset-3">
                     <span class="copyright">Copyright &copy; 2016 Eastern Oregon University</span>
+                </div>
+            </div>
+
+            <div class="row boxes-row">
+                <div class="col-xs-8">
+                    <div class="box box-double debug-border">
+                        <div class="title">Welcome to EOU</div>
+                        <img src="images/box-1-1.jpg" class="box-img box-image-double spacing-margin-top-half">
+                        <button class="main-button color-white background-green spacing-width-3 spacing-height-1 spacing-margin-top-half">Apply Now</button>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-xs-4">
+                    <div class="box debug-border">
+                        <div class="title">Programs</div>
+                        <img src="images/box-2.jpg" class="box-img spacing-margin-top-half">
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-xs-4">
+                    <div class="box debug-border">
+                        <div class="title">Community</div>
+                        <img src="images/box-3.jpg" class="box-img spacing-margin-top-half">
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-xs-8">
+                    <div class="box box-double debug-border">
+                        <div class="title">Sports</div>
+                        <img src="images/box-4.jpg" class="box-img box-image-double spacing-margin-top-half">
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-xs-4">
+                    <div class="box debug-border">
+                        <div class="title">Events &amp; Activities</div>
+                        <img src="images/box-5.jpg" class="box-img spacing-margin-top-half">
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                    </div>
                 </div>
             </div>
 
