Mostly fixed box layout and did a few other things

--- a/root/index.html
+++ b/root/index.html
@@ -14,6 +14,7 @@
         <link href="stylesheets/positioning.css" rel="stylesheet" type="text/css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="stylesheets/bootstrap-columns.css" rel="stylesheet" type="text/css">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div class="container-fluid">
@@ -50,11 +51,11 @@
 
             <div class="row social-button-row-2">
                 <div class="col-xs-3 col-xs-offset-6">
-                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1">f</button>
-                    <button class="main-button color-white background-tan spacing-width-1 spacing-height-1 spacing-margin-left-1">t</button>
-                    <button class="main-button color-white background-gold spacing-width-1 spacing-height-1 spacing-margin-left-1">i</button>
-                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1">r</button>
-                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1">y</button>
+                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1" onclick="window.location.href = 'http://www.facebook.com/eouadmissions';">f</button>
+                    <button class="main-button color-white background-light-blue spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://twitter.com/eoumountaineers';">t</button>
+                    <button class="main-button color-white background-brown spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://instagram.com/monty.mountaineer';">i</button>
+                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://www.eou.edu/feed/';">r</button>
+                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://www.youtube.com/eouniversity';">y</button>
                 </div>
             </div>
 
@@ -65,44 +66,49 @@
             </div>
 
             <div class="row boxes-row">
-                <div class="col-xs-8">
-                    <div class="box box-double debug-border">
+                <div class="col-custom-vw-8">
+                    <div class="box box-double">
                         <div class="title">Welcome to EOU</div>
                         <img src="images/box-1-1.jpg" class="box-img box-image-double spacing-margin-top-half">
-                        <button class="main-button color-white background-green spacing-width-3 spacing-height-1 spacing-margin-top-half">Apply Now</button>
-                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                        <div class="image-caption background-blue">Small class sizes allow for a closer connection to the instructor, enhancing the learning experience.</div>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
+                        <button class="main-button color-white background-green spacing-width-3 spacing-height-1 spacing-margin-top-half pull-right">Apply Now</button>
                     </div>
                 </div>
 
-                <div class="col-xs-4">
-                    <div class="box debug-border">
+                <div class="col-custom-vw-4">
+                    <div class="box">
                         <div class="title">Programs</div>
                         <img src="images/box-2.jpg" class="box-img spacing-margin-top-half">
-                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                        <div class="image-caption background-orange">Discover the various academic programs that EOU offers.</div>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
                 </div>
 
-                <div class="col-xs-4">
-                    <div class="box debug-border">
+                <div class="col-custom-vw-4">
+                    <div class="box">
                         <div class="title">Community</div>
                         <img src="images/box-3.jpg" class="box-img spacing-margin-top-half">
-                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                        <div class="image-caption background-gold">With close proximity to downtown La Grande, students can easily access many of the local shops and attractions.</div>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
                 </div>
 
-                <div class="col-xs-8">
-                    <div class="box box-double debug-border">
+                <div class="col-custom-vw-8">
+                    <div class="box box-double">
                         <div class="title">Sports</div>
                         <img src="images/box-4.jpg" class="box-img box-image-double spacing-margin-top-half">
-                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                        <div class="image-caption background-red">EOU football player about to score winning touchdown.</div>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
                 </div>
 
-                <div class="col-xs-4">
+                <div class="col-custom-vw-4">
                     <div class="box debug-border">
                         <div class="title">Events &amp; Activities</div>
                         <img src="images/box-5.jpg" class="box-img spacing-margin-top-half">
-                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1">Learn More</button>
+                        <div class="image-caption background-orange">Art students create three-dimensional sculptures out of clay.</div>
+                        <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
                 </div>
             </div>
