Cropped and compressed the images so that they fit into their boxes and load quicker

--- a/root/index.html
+++ b/root/index.html
@@ -69,7 +69,7 @@
                 <div class="col-custom-vw-8">
                     <div class="box box-double">
                         <div class="title">Welcome to EOU</div>
-                        <img src="images/box-1-1.jpg" class="box-img box-image-double spacing-margin-top-half">
+                        <img src="images/box-1.jpg" class="box-img box-image-double spacing-margin-top-half">
                         <div class="image-caption background-blue">Small class sizes allow for a closer connection to the instructor, enhancing the learning experience.</div>
                         <button class="main-button color-white background-gold spacing-width-3 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                         <button class="main-button color-white background-green spacing-width-3 spacing-height-1 spacing-margin-top-half pull-right">Apply Now</button>
